# airbnb_django

./: .gitignore  README.md  pyproject.toml
bookings/: admin.py  models.py  serializers.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
common/: models.py  permissions.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
experiences/: admin.py  models.py  urls.py  views.py
houses/: admin.py  models.py
medias/: admin.py  models.py  urls.py  views.py
reviews/: admin.py  models.py
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  test.py  types.py  urls.py  views.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializers.py  types.py  urls.py  views.py
wishlists/: admin.py  models.py  urls.py  views.py
